[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )
First_Level = "res://levels/DemoScene.tscn"

[node name="Panel" type="Panel" parent="."]
margin_right = 1928.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 643.392
margin_top = 240.312
margin_right = 1394.39
margin_bottom = 876.312
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 750.0
margin_bottom = 14.0
text = "GoDotFizzle"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 750.0
margin_bottom = 564.0
size_flags_vertical = 3
text = "Start!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add_Controller" type="Button" parent="Panel/VBoxContainer"]
margin_top = 568.0
margin_right = 750.0
margin_bottom = 588.0
text = "Add Controller Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
margin_top = 592.0
margin_right = 750.0
margin_bottom = 612.0
text = "Options"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 616.0
margin_right = 750.0
margin_bottom = 636.0
text = "Quit"
[connection signal="pressed" from="Panel/VBoxContainer/Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Add_Controller" to="." method="_on_Add_Controller_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
